- Bug #47: Wrong url parsing when CUrlManager is set in path format (Qiang)
- Bug #48: Typo in CActiveRecord::setAttribute (Qiang)
- Bug #49: Invalid markup generated by yiic tool (Qiang)
- Bug #53: tabular form input causes AR to fail (Qiang)
- Bug #54: typo in CHtml::listOptions (Qiang)
- Bug #57: Explicit column aliasing is not working in relational AR when the column appears in ORDER BY (Qiang)
- Bug #60: Related objects not available in CActiveRecord::afterSave (Qiang)
- Bug #69: Variable undefined error in CController::renderText (Qiang)
- Enhancement #44: Make "yiic shell" command to support controllers organized in subdirectories (Qiang)
- Enhancement #51: Add support to import actions declared by a widget (Qiang)
- Enhancement #55: Add support for generating meta and link tags (Qiang)
- Enhancement #56: Allow specifying customized 'on' when a validator can be applied (Qiang)
- Enhancement #58: Allow specifying HAVING clause in DB criteria (Qiang)
- Enhancement #62: Allow URL routes to be case-insensitive by adding CUrlManager::caseSensitive property (Qiang)
- Enhancement #64: Add support to use relational AR when FK constraints are not defined in DB (Qiang)
- Enhancement #65: Added "alias" option to AR relations so that table aliases can be explicitly specified (Qiang)
- Enhancement #66: Add support to allow using isset() and unset() with component properties (Qiang)
- Enhancement #68: Upgrade the javascript for CMaskedTextField to 1.2.0 (Qiang)
- Enhancement: Fixed inaccurate error message when adding an item as a child of itself in CAuthManager (Qiang)
- Enhancement: CHtml::activeId and CHtml::activeName (Qiang)
- Enhancement: Added German, Spanish and Swedish core message translations (mikl, sebas, tri)
- Enhancement: Added CController::init() (Qiang)
- Enhancement: Changed Yii::createComponent() to support property initialization (Qiang)

Version 1.0 December 3, 2008
----------------------------
Initial release