@@ -127,7 +127,7 @@ class PostController extends CController
 	 */
 	protected function getListCriteria($pages)
 	{
-		$criteria=Yii::createComponent('system.db.schema.CDbCriteria');
+		$criteria=new CDbCriteria;
 		$columns=Post::model()->tableSchema->columns;
 		if(isset($_GET['sort']) && isset($columns[$_GET['sort']]))
 		{
