@@ -9,6 +9,9 @@ return array(
 	'basePath'=>dirname(__FILE__).DIRECTORY_SEPARATOR.'..',
 	'name'=>'My Web Application',
 
+	// preloading 'log' component
+	'preload'=>array('log'),
+
 	// autoloading model and component classes
 	'import'=>array(
 		'application.models.*',
@@ -17,6 +20,15 @@ return array(
 
 	// application components
 	'components'=>array(
+		'log'=>array(
+			'class'=>'CLogRouter',
+			'routes'=>array(
+				array(
+					'class'=>'CFileLogRoute',
+					'levels'=>'error, warning',
+				),
+			),
+		),
 		'user'=>array(
 			// enable cookie-based authentication
 			'allowAutoLogin'=>true,
